--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="screen">
-        <h1>Catch The Insect</h1>
+        <h1>Catch The Bird</h1>
         <button class="btn" id="start-btn">Play Game</button>
     </div>
    <div class="screen">
@@ -41,7 +41,7 @@
        <h3 id="score" class="score">Score: 0</h3>
        <h5 id="message" class="message">
            Are you annoyed yet? <br>
-           You are playing an inpossible game!!
+           You are playing an impossible game!!
        </h5>
 
        <div class="insect">
